Fix z-index of floating button in my-events

--- a/src/app/my-events/my-events.component.css
+++ b/src/app/my-events/my-events.component.css
@@ -11,6 +11,7 @@
     position: fixed;
     bottom: 20px;
     right: 20px;
+    z-index: 5;
 }
 
 @media (min-width: 480px) {
